# prog2002-gitlab-build-template

./: .gitlab-ci (2).yml  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  main.cpp
Docker/: Dockerfile  run.sh
Scripts/: copy_template.py
